Fixed footer and header on mobile.

--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,7 @@ html, body {
     border-radius: 8px;
     transition: all 0.2s ease;
     position: relative;
+    line-height: 32px;
 }
 
 .normal-link:hover {
@@ -362,11 +363,20 @@ header{
     img {
         max-width: 100%;
     }
+
+    .normal-link {
+        font-size: 8px;
+    }
+
+    .normal-link:hover {
+        
+        font-size: 9px;
+    }
     
     .header-button {
         width: 18px; 
         height: 20px;
-        margin: 20px 30px;
+        margin: 20px 20px;
         font-size: 0; 
         border-radius: 100%; 
         background-color: var(--text-col);
@@ -451,6 +461,6 @@ header{
     }
 
     .sources {
-        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
     }
 }
